--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^29.6.1"
-  },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.1",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.0.0"
+  },
+  "dependencies": {
+    "@jest/globals": "^29.6.1",
+    "node-fetch": "^3.3.1"
   }
 }
