--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.1",
     "jest-fetch-mock": "^3.0.3",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "@jest/globals": "^29.6.1",
