--- a/package.json
+++ b/package.json
@@ -6,25 +6,27 @@
   "type": "module",
   "scripts": {
     "lint": "eslint.",
-    "format": "prettier --write."
+    "format": "prettier --write.",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "babel-jest": "^29.6.1",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.11",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.11",
+    "@babel/preset-env": "^7.22.10",
+    "babel-jest": "^29.6.4",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.4",
     "jest-fetch-mock": "^3.0.3",
-    "prettier": "^3.0.0",
-    "supertest": "^6.3.3"
+    "prettier": "^3.0.0"
   },
   "dependencies": {
     "@jest/globals": "^29.6.1",
     "axios": "^1.4.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.2"
   }
 }
