--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,24 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+
+    - name: Run tests
     - run: npm test
+
+    - name: Upload report
+      uses: actions/upload-artifact@v3
+      with:
+        name: report
+        if-no-files-found: error
+        path: ./jest-html-report
+
+    - name: Deploy Report to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.TEST_TOKEN }}
+        publish_dir: ./html-report
+  if: success()
+
+
+
+
