--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+
+    - name: Install deps
+      run: npm ci
+
+    - name: Build package
+      run: npm run build --if-present
 
     - name: Run tests
-    - run: npm test
+      run: npm test
 
     - name: Upload report
       uses: actions/upload-artifact@v3
