--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,10 +44,8 @@ jobs:
         path: ./jest-html-report
 
     - name: Deploy Report to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.TEST_TOKEN }}
-        publish_dir: ./html-report
+      id: deployment
+      uses: actions/deploy-pages@v1
 
 
 
