--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,8 +44,10 @@ jobs:
         path: ./jest-html-report
 
     - name: Deploy Report to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.TEST_TOKEN }}
+        publish_dir: ./jest-html-report
 
 
 
