--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,13 +28,13 @@ jobs:
         cache: 'npm'
 
     - name: Install deps
-      run: npm ci
+    - run: npm ci
 
     - name: Build package
-      run: npm run build --if-present
+    - run: npm run build --if-present
 
     - name: Run tests
-      run: npm test
+    - run: npm test
 
     - name: Upload report
       uses: actions/upload-artifact@v3
