--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
       run: npm run build --if-present
 
     - name: Run tests
-      run: npm run test
+      run: npm run test:report
 
     - name: Upload report
       uses: actions/upload-artifact@v3
