--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,16 +36,16 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
 
     - name: Install deps
-      run: npm ci
+      run: yarn install
 
     - name: Build package
-      run: npm run build --if-present
+      run: yarn build --if-present
 
     - name: Run tests
-      run: npm run test:report
+      run: yarn test:report
 
     - name: Upload report
       uses: actions/upload-artifact@v3
@@ -68,15 +68,11 @@ jobs:
         photo: ./test.png
         message: |
           ${{ github.actor }} created commit:
-          Commit message: ${{ github.event.commits[0].message }}
+          Commit message: ${{ github.event.commits.message }}
           
           Repository: ${{ github.repository }}
           
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-  
-
-
-
 
 
 
