--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint.",
+    "lint": "eslint .",
     "format": "prettier --write.",
     "test": "jest",
     "test:report": "jest --ci --reporters=default --reporters=jest-html-reporters",
@@ -26,17 +26,21 @@
     "@babel/core": "^7.22.11",
     "@babel/plugin-transform-modules-commonjs": "^7.22.11",
     "@babel/preset-env": "^7.22.10",
-    "@playwright/test": "^1.38.1",
+    "@eslint/js": "^9.18.0",
+    "@playwright/test": "^1.49.1",
     "@types/node": "^20.8.2",
     "babel-jest": "^29.6.4",
-    "eslint": "^8.45.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "globals": "^15.14.0",
     "jest": "^29.6.4",
     "jest-fetch-mock": "^3.0.3",
     "jest-html-reporter": "^3.10.2",
     "jest-html-reporters": "^3.1.4",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
   },
   "dependencies": {
     "axios": "^1.5.0",
