--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:dev": "playwright test --ui",
     "test:debug": "playwright test --debug",
     "codegen": "playwright codegen",
-    "report:show": "playwright show-report"
+    "report:show": "playwright show-report",
+    "test:ci": "playwright test --reporter=html"
   },
   "repository": {
     "type": "git",
